refactor: Clean up and refactor code
This commit removes unused files and resources, updates library versions,
and refactors various parts of the application including:
- Removing the unused Callbacks interface.
- Deleting unused default launcher icons.
- Removing old dialog classes replaced by new ones.
- Deleting unused layout files for old dialogs.
- Removing unused code in CreateLobbyActivity.
- Updating GridLayout dependency in build.gradle.kts and libs.versions.toml.
- Removing unused background color from layout files.
- Externalizing strings in layout files to resources.
- Removing unused imports in several classes.
- Updating LobbyActivity to display lobby name and ID.
- Updating LobbyClient to store lobby name.
- Updating LobbyAdapter to use string resources for player count.
- Updating LoginHandler to ignore START_GAME messages.
- Removing commented out code in xml files.
- Updating GameClientHandler and GameBoardActivity to use new dialog classes.
- Adding new dialog classes (TaxDialog, TileInfoDialog) to game.dialog package.
- Updating GameBoardActivity to use string resources for text views.
- Updating LobbyStomp to use constants for topic paths and simplify JSON parsing.

--- a/app/src/main/res/layout/create_lobby.xml
+++ b/app/src/main/res/layout/create_lobby.xml
@@ -12,7 +12,7 @@
         android:id="@+id/lobbyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create a Lobby"
+        android:text="@string/create_a_lobby"
         android:textSize="24sp"
         android:layout_marginBottom="24dp"/>
 
@@ -20,14 +20,14 @@
         android:id="@+id/lobbyNameInput"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Enter lobby name"
+        android:hint="@string/enter_lobby_name"
         android:layout_marginBottom="24dp"/>
 
     <Button
         android:id="@+id/createLobbyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create"
+        android:text="@string/create"
         android:textColor="#000000"/>
 
 </LinearLayout>
