--- a/app/src/main/res/layout/dialog_bank_card.xml
+++ b/app/src/main/res/layout/dialog_bank_card.xml
@@ -13,7 +13,7 @@
         android:id="@+id/bankCardTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BANK"
+        android:text="@string/bank"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#004488"
@@ -29,7 +29,7 @@
         android:id="@+id/bankCardText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Karteninhalt..."
+        android:text="@string/karteninhalt"
         android:textSize="16sp"
         android:textColor="#000000"
         android:gravity="center"
@@ -39,7 +39,7 @@
         android:id="@+id/okBankCardBtn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="OK"
+        android:text="@string/ok"
         android:textStyle="bold"
         android:backgroundTint="#004488"
         android:textColor="#FFFFFF" />
