--- a/app/src/main/res/layout/dialog_risk_card.xml
+++ b/app/src/main/res/layout/dialog_risk_card.xml
@@ -13,7 +13,7 @@
         android:id="@+id/riskCardTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RISIKO"
+        android:text="@string/risiko"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#AA0000"
@@ -30,7 +30,7 @@
         android:id="@+id/riskCardText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gehe auf Feld 22. Passierst du den Start, erhältst du 200 €."
+        android:text="@string/gehe_auf_feld_22_passierst_du_den_start_erh_ltst_du_200"
         android:textSize="16sp"
         android:textColor="#000000"
         android:gravity="center"
@@ -40,7 +40,7 @@
         android:id="@+id/okRiskCardBtn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="OK"
+        android:text="@string/ok"
         android:textStyle="bold"
         android:backgroundTint="#AA0000"
         android:textColor="#FFFFFF"
