--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -3,15 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFF8E1">
+    android:layout_height="match_parent">
 
         <!-- Titel "Lobby" -->
         <TextView
             android:id="@+id/titleLobby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lobby"
+            android:text="@string/lobby"
             android:textSize="30sp"
             android:textColor="#0D47A1"
             android:textStyle="bold"
@@ -25,7 +24,7 @@
             android:id="@+id/playerListView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Waiting for players..."
+            android:text="@string/waiting_for_players"
             android:textColor="#000000"
             android:textSize="18sp"
             android:padding="12dp"
@@ -40,7 +39,7 @@
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Game"
+            android:text="@string/start_game"
             android:visibility="gone"
             android:background="@drawable/button_yellow_with_border"
             android:textColor="#000000"
