--- a/app/src/main/res/layout/dialog_pass_start.xml
+++ b/app/src/main/res/layout/dialog_pass_start.xml
@@ -13,7 +13,7 @@
         android:id="@+id/startTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Startbonus!"
+        android:text="@string/startbonus"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#2E7D32"
@@ -23,7 +23,7 @@
         android:id="@+id/startText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Du hast das Startfeld überquert."
+        android:text="@string/du_hast_das_startfeld_berquert"
         android:textSize="16sp"
         android:layout_marginBottom="24dp" />
 
@@ -31,7 +31,7 @@
         android:id="@+id/okStartBtn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="OK"
+        android:text="@string/ok"
         android:textStyle="bold"
         android:backgroundTint="#2E7D32"
         android:textColor="#FFFFFF" />
