--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -218,5 +218,14 @@
             android:background="@drawable/button_yellow_with_border"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/textTesting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/gelandet_auf_default"
+            android:layout_marginTop="12dp"/>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
