--- a/app/src/main/res/layout/dialog_tile_info.xml
+++ b/app/src/main/res/layout/dialog_tile_info.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tileNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stra_e"
+        android:text="@string/strasse"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000000"
