--- a/app/src/main/res/layout/dialog_tax.xml
+++ b/app/src/main/res/layout/dialog_tax.xml
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="24dp"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:elevation="6dp">
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/taxTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/steuer"
-        android:textSize="24sp"
+        android:text="Steuer"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#B71C1C"
-        android:layout_marginBottom="12dp" />
+        android:gravity="center"
+        android:layout_marginBottom="12dp"/>
 
     <TextView
         android:id="@+id/taxText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/du_musst_steuern_zahlen"
+        android:text="Text"
         android:textSize="16sp"
-        android:layout_marginBottom="24dp" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/okTaxBtn"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ok"
-        android:textStyle="bold"
-        android:backgroundTint="#B71C1C"
-        android:textColor="#FFFFFF" />
+        android:text="OK"
+        android:layout_marginTop="20dp" />
 </LinearLayout>
+
