--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -101,6 +101,68 @@
 
     </FrameLayout>
 
+    <!-- Würfel Anzeige -->
+    <LinearLayout
+        android:id="@+id/diceContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:background="@drawable/bg_overlay_dark"
+        android:visibility="gone"
+        android:elevation="20dp"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/dice1"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/view_1"
+            android:contentDescription="Dice 1" />
+
+        <ImageView
+            android:id="@+id/dice2"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/view_2"
+            android:contentDescription="Dice 2" />
+
+        <ImageView
+            android:id="@+id/dice3"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/view_3"
+            android:contentDescription="Dice 3" />
+
+        <ImageView
+            android:id="@+id/dice4"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/view_4"
+            android:contentDescription="Dice 4" />
+
+        <ImageView
+            android:id="@+id/dice5"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/view_5"
+            android:contentDescription="Dice 5" />
+
+        <ImageView
+            android:id="@+id/dice6"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/view_6"
+            android:contentDescription="Dice 6" />
+    </LinearLayout>
+
     <!-- Linke Leiste: Spielerinfos -->
     <LinearLayout
         android:id="@+id/leftControls"
